[package]
name = "sdbatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
base64 = "0.21.5"
choose-rand = "0.2.0"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
http = "1.0.0"
image = "0.24.7"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
